# minesweeper

./: CMakeLists.txt
src/: main.cpp  minesweeper.cpp  minesweeper.hpp
tests/: mainTest.cpp
